# portail

./: .gitattributes  .gitignore  README.md  package.json
Capture/: AutoStartPortailCapture.cs  Portail.Capture.Runtime.asmdef  PortailCaptureAudioSink.cs  PortailCapturePlugin.cs  PortailCursor.cs
Control/: Portail.Control.Runtime.asmdef  PortailFocusController.cs  PortailShellPopupDetector.cs
Core/: Portail.Core.Runtime.asmdef  PortailFeed.cs
Native~/portail_capture_plugin/: BuildAndCopyDlls.ps1  CMakeLists.txt
Native~/portail_capture_plugin/build_refactor/: .ninja_deps  .ninja_log
Native~/portail_capture_plugin/src/common/: protocol.h
Native~/portail_capture_plugin/src/plugin/: virtualdesktop_plugin.cpp
Native~/portail_stream_plugin/: BuildAndCopyDlls.ps1  CMakeLists.txt  README.md  README_UNITY_PLUGIN.md
Native~/portail_stream_plugin/build_refactor/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  portail_stream_common.ilk  portail_stream_common.lib  portail_stream_receiver_plugin.exp  portail_stream_receiver_plugin.lib  stream_audio.lib
Native~/portail_stream_plugin/src/client/: client_audio_pipeline.h  client_connection_state.h  client_peer_state.h  client_protocol_sender.h  client_quality_state.h  client_stats.h  client_video_decode_queue.h  client_video_state.h  ffmpeg_decoder.h  frame_assembler.h  gpu_texture_bridge.h  recovery_unit.h
Native~/portail_stream_plugin/src/common/: connection_path.h  d3d11_unity_utils.h  protocol.h  steam_sdr.cpp  steam_sdr.h
Native~/portail_stream_plugin/src/host/: encoded_packet.h  ffmpeg_encoder.h  host_lod_config.h  host_media_sender.h  host_options.h  host_peer_sender.h  host_route_state.h  host_runtime_state.h  host_stats.h  sdr_queue_status.h  shared_texture_mirror.h  virtual_desktop_capture_bridge.h
Native~/portail_stream_plugin/src/plugin/: IUnityInterface.h  client_plugin.cpp  client_plugin_api.h  host_plugin.cpp  host_plugin_api.h  receiver_plugin_api.h
Native~/portail_stream_plugin/src/receiver/: ffmpeg_decoder.h  frame_assembler.h  receiver_audio_pipeline.h  receiver_peer_state.h  receiver_protocol_sender.h
Native~/portail_stream_plugin/src/sender/: ffmpeg_encoder.h  sender_peer_sender.h  sender_route_state.h  sender_stats.h  shared_texture_mirror.h
Playback/: Portail.Playback.Runtime.asmdef  PortailAudioPlayback.cs  PortailFeedPlayback.cs
Portail.Local/: package.json
Portail.Local/Capture/: Portail.Local.Capture.Runtime.asmdef  PortailCaptureAudioSink.cs  PortailCaptureNativeBridge.cs  PortailCaptureNativeLogBridge.cs  PortailCapturePlugin.cs  PortailCaptureSession.cs  PortailCursor.cs
Portail.Local/Capture/Native~/portail_capture_plugin/: BuildAndCopyDlls.ps1  CMakeLists.txt
Portail.Local/Capture/Native~/portail_capture_plugin/build_refactor/: CMakeCache.txt  build.ninja  cmake_install.cmake  portail_capture_plugin.exp  portail_capture_plugin.lib
Portail.Local/Capture/Native~/portail_capture_plugin/src/common/: audio_stream.h  virtualdesktop_audio_stream.cpp
Portail.Local/Control/: Portail.Local.Control.Runtime.asmdef  PortailFocusController.cs  PortailShellPopupDetectorLogger.cs
Portail.Local/Core/: Portail.Local.Core.Runtime.asmdef  PortailFeed.cs  PortailRuntimeState.cs
Portail.Local/Playback/: Portail.Local.Playback.Runtime.asmdef  PortailAudioPlayback.cs  PortailFeedPlayback.cs
Portail.Network/: package.json
Portail.Network/Control/: Portail.Network.Control.Runtime.asmdef
Portail.Network/Stream/: Portail.Network.Stream.Runtime.asmdef  PortailStreamNativeLoader.cs  PortailStreamNativeLogBridge.cs  PortailStreamNetworkUtility.cs  PortailStreamParticipant.cs  PortailStreamQualityController.cs  PortailStreamReceiver.cs  PortailStreamReceiverPlugin.cs  PortailStreamSender.cs  PortailStreamSenderPlugin.cs  PortailStreamUploadQualityController.cs
Portail.Network/Stream/Native~/portail_stream_plugin/: BuildAndCopyDlls.ps1  CMakeLists.txt  README.md  README_UNITY_PLUGIN.md
Portail.Network/Stream/Native~/portail_stream_plugin/build_refactor/: CMakeCache.txt  portail_stream_common.exp  portail_stream_sender_plugin.exp  portail_stream_sender_plugin.lib
Portail.Network/Stream/Native~/portail_stream_plugin/src/common/: audio_stream.cpp  audio_stream.h  codec_utils.h  lod_utils.h  plugin_log.h  protocol_validation.h  time_utils.h  unity_texture_copy.h
Portail.Network/Stream/Native~/portail_stream_plugin/src/plugin/: IUnityGraphicsD3D11.h  receiver_plugin.cpp  sender_plugin.cpp  sender_plugin_api.h
Portail.Network/Stream/Native~/portail_stream_plugin/src/receiver/: gpu_texture_bridge.h  receiver_connection_state.h  receiver_quality_state.h  receiver_stats.h  receiver_video_decode_queue.h  receiver_video_state.h  recovery_unit.h
Portail.Network/Stream/Native~/portail_stream_plugin/src/sender/: encoded_packet.h  sdr_queue_status.h  sender_lod_config.h  sender_media_sender.h  sender_options.h  sender_runtime_state.h  virtual_desktop_capture_bridge.h
Stream/: Portail.Stream.Runtime.asmdef  PortailStreamClientPlugin.cs  PortailStreamHostPlugin.cs  PortailStreamNativeLoader.cs  PortailStreamNativeLogBridge.cs  PortailStreamReceiverPlugin.cs  PortailStreamSenderPlugin.cs
Stream/Mirror/: MirrorPortailParticipant.cs  MirrorPortailStreamReceiver.cs  MirrorPortailStreamSender.cs  Portail.Stream.Mirror.Runtime.asmdef  PortailStreamMirrorUtility.cs  PortailStreamQualityController.cs  PortailStreamUploadQualityController.cs
